src/objects/Revenue_Split__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Remaining_To_Split__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this will display amount remaining to split</description>
        <label>Amount Remaining To Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Item__c</fullName>
        <label>Charge Item</label>
        <referenceTo>Charge_Item__c</referenceTo>
        <relationshipLabel>Revenue Splits</relationshipLabel>
        <relationshipName>Revenue_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Revenue Splits</relationshipLabel>
        <relationshipName>Revenue_Splits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Charge_Item__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Split</label>
    <nameField>
        <displayFormat>revenuesplit-{0000000}</displayFormat>
        <label>Revenue Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>